# cpp-dev-container

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
cmake/: Sanitizers.cmake  cache.cmake  compilerWarnings.cmake  sanitizers.cmake  standardProjectSettings.cmake  staticAnalyzers.cmake
src/: CMakeLists.txt  PropertyBag-test.cpp  PropertyBag.h  Range-test.cpp  ValueRange.h  VlanId.h  dummy.cpp  square-test-gtest.cpp  square-test.cpp  square.cpp  square.h
src/BashCommand/: BashCommand-test.cpp  BashCommand.cpp  BashCommand.h
src/PropertyBag/: PropertyBag-test.cpp  PropertyBag.h
src/ValueRange/: ValueRange-test.cpp
src/VlanId/: VlanId-test.cpp  VlanId.h
tests/: CMakeLists.txt  unittest-main.cpp
